# HadronModel

./: .gitignore  CMakeLists.txt  README.md
exec/: CMakeLists.txt
exec/p-p/: Amplitude_NN_NDelta.cpp  Amplitude_NN_NDelta.hpp  CMakeLists.txt  FeynmanRules.cpp  FeynmanRules.hpp  NN_NDelta.cpp  NN_NDelta_main.cpp  NN_NDelta_parameters
exec/p-p/form/: pp_ND.frm  pp_ND_tt.frm  pp_ND_tu.frm  trace.frm
exec/pi-N/: Amplitude_R_piN.cpp  Amplitude_R_piN.hpp  Amplitude_piN_elastic.cpp  Amplitude_piN_elastic.hpp  BornTerms.cpp  BornTerms.hpp  CMakeLists.txt  R_piN_decay.cpp  R_piN_decay.hpp  R_piN_decay_main.cpp  cutoffs.cpp  cutoffs.hpp  factors.md  fit_resonance_couplings.cpp  jobSample  observables.cpp  observables.hpp  piN_Ndilep.cpp  piN_Ndilep.hpp  piN_Ndilep_main.cpp  piN_Ngammastar.cpp  piN_Ngammastar.hpp  piN_Npipi.cpp  piN_Npipi.hpp  piN_Npipi_generator.cpp  piN_Npipi_main.cpp  piN_elastic.cpp  piN_elastic.hpp  piN_elastic_main.cpp  pionPhotoprod.cpp  pionPhotoprod.hpp  pionPhotoprodAnalytic.cpp  pionPhotoprodAnalytic.hpp  pionPhotoprodAnalytic_main.cpp  pionPhotoprodTest.cpp  pionPhotoprodTest.hpp  pionPhotoprod_main.cpp  resdec.cpp  resdec.hpp  rhoPhase.cpp
exec/pi-N/FORM/: piN_ela_N1440.frm
exec/pi-N/experimentalData/: pi+p_ela.exp  pi+p_tot.exp  pi-p_ela.exp  pi-p_npi0.exp  pi-p_tot.exp  pion_photoprod_pi+_n_tot.exp  pion_photoprod_pi-_p_tot.exp  pion_photoprod_pi0_p_tot.exp
exec/pi-N/form/: RNgamma_dec.frm  pionPhotoprod.frm
exec/pi-N/gnuplot/: pionPhotoprod.gnu  pionPhotoprod_old.gnu  pionPhotoprod_test.gnu
exec/pi-N/scripts/: jobPionPhotoprod  jobPionPhotoprod_old  jobPionPhotoprod_test  jobSample  jobpiN_Npipi  piN_Ndilep.gnuplot  piN_Npipi.gnuplot  pionPhotoprod.gnuplot  styles.gp
exec/test/: CMakeLists.txt  test.cpp  test32projector.cpp  testTransformations.cpp
lib/: CMakeLists.txt
lib/ELModel/: CMakeLists.txt  FormFactors.cpp  FormFactors.hpp  Gamma.cpp  Gamma.hpp  Resonance.cpp  Resonance.hpp  Vrancx.cpp  Vrancx.hpp  model_params  model_params_old  oldModel.cpp  oldModel.hpp
lib/FeynTools/: CMakeLists.txt  Config.cpp  Config.hpp  CrossSection.hpp  DecayWidth.hpp  FeynTools.hpp  HelicityAmplitudes.cpp  HelicityAmplitudes.hpp  Histogram.cpp  Histogram.hpp  Isospin.cpp  Isospin.hpp  Kinema.cpp  Kinema.hpp  MultiArray.cpp  MultiArray.hpp  RandomNumberGenerator.cpp  RandomNumberGenerator.hpp  Spinors.cpp  Spinors.hpp  Tabulator.hpp  Transformations.cpp  Transformations.hpp  Vectors.cpp  Vectors.hpp  halfint.cpp  halfint.hpp  require.h  udouble.cpp  udouble.hpp  units.cpp  units.hpp  utils.cpp  utils.hpp  wavefunc.cpp  wavefunc.hpp
